Fixed todo title overflow in project explorer and some visual adjustments

--- a/src/sass/components/_project-explorer.scss
+++ b/src/sass/components/_project-explorer.scss
@@ -52,9 +52,12 @@
     display: flex;
     align-items: center;
     height: 25px;
-    padding-left: 40px;
+    padding-left: 20px;
     padding-right: 10px;
     gap: 10px;
+
+    overflow: hidden;
+    white-space: nowrap;
 
     color: #aaa;
 
